web/book/tests/documentation/snapshots/documentation__book__reference__data__relation-literals__array-literals__1.snap
---
source: web/book/tests/documentation/book.rs
expression: "let my_artists = [\n  {artist=\"Miles Davis\"},\n  {artist=\"Marvin Gaye\"},\n  {artist=\"James Brown\"},\n]\n\nfrom artists\njoin my_artists (==artist)\njoin albums (==artist_id)\nselect {artists.artist_id, albums.title}\n"
---
WITH table_0 AS (
    SELECT 'Miles Davis' AS artist
    UNION ALL
    SELECT 'Marvin Gaye' AS artist
    UNION ALL
    SELECT 'James Brown' AS artist
),

my_artists AS (SELECT artist FROM table_0)

SELECT artists.artist_id, albums.title
FROM artists
JOIN my_artists ON artists.artist = my_artists.artist
JOIN albums ON artists.artist_id = albums.artist_id
