web/book/tests/documentation/snapshots/documentation__book__reference__data__relation-literals__array-literals__2.snap
---
source: web/book/tests/documentation/book.rs
expression: "from_text \"\"\"\na,b,c\n1,2,3\n4,5,6\n\"\"\"\nderive {\n    d = b + c,\n    answer = 20 * 2 + 2,\n}\n"
---
WITH table_0 AS (
    SELECT
        '1' AS a,
        '2' AS b,
        '3' AS c
    UNION ALL
    SELECT
        '4' AS a,
        '5' AS b,
        '6' AS c
)

SELECT
    a,
    b,
    c,
    b + c AS d,
    20 * 2 + 2 AS answer
FROM table_0
